# openll-cpp

./: AUTHORS  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  openll-config.cmake
data/openll/shaders/: glyph.frag  glyph.geom  glyph.vert
deploy/: CMakeLists.txt
docs/api-docs/: CMakeLists.txt  doxyfile.in
source/: CMakeLists.txt
source/examples/: CMakeLists.txt
source/examples/labeling-at-point/: CMakeLists.txt  PointDrawable.cpp  PointDrawable.h  datapath.inl  main.cpp
source/examples/openll-example/: CMakeLists.txt  main.cpp
source/examples/point-based-layouting/: CMakeLists.txt  benchmark.cpp  benchmark.h  main.cpp
source/openll/: CMakeLists.txt
source/openll/include/openll/: Alignment.h  FontFace.h  FontLoader.h  Glyph.h  GlyphRenderer.h  GlyphSequence.h  GlyphVertexCloud.h  Label.h  LineAnchor.h  Text.h  Typesetter.h  openll.h
source/openll/source/: FontFace.cpp  FontLoader.cpp  Glyph.cpp  GlyphRenderer.cpp  GlyphSequence.cpp  GlyphVertexCloud.cpp  Label.cpp  Text.cpp  Typesetter.cpp  openll.cpp
source/tests/: CMakeLists.txt
source/tests/openll-test/: CMakeLists.txt  openll_test.cpp
